components/leaderboard/Leaderboard.module.scss
/* ... */
.interactionsFitTable > :not(caption) > * > * {
  padding-left: 0.35rem;
  padding-right: 0.35rem;
}

.interactionsCollectorCell {
  max-width: 0;
}

.leaderboardTable {
  margin-bottom: 0 !important;
  width: 100%;

  tr td {
    white-space: nowrap;
    align-items: center;
    vertical-align: middle;
    span {
      float: left;
      margin-top: 4px;
      margin-bottom: 4px;
      a {
        line-height: 40px;
      }
    }
  }

  th {
    white-space: nowrap;
    line-height: 28px;
  }

  th span {
    white-space: nowrap;
  }

  td {
    line-height: 40px;
  }

  thead tr {
    background-color: transparent !important;
  }

  tbody tr:nth-child(odd) {
    background-color: variables.$almost-very-dark-grey;
  }
}

.leaderboardTableShell {
  overflow-x: auto;
  width: 100%;
}

.leaderboardEmpty {
  color: variables.$font-color;
  padding: 1rem 0;
}

.collectorLevel {
  display: inline-flex;
  flex-shrink: 0;
  line-height: 1;

  span {
    float: none !important;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
  }
}

@media only screen and (max-width: 1600px) {
  .hodler {
    white-space: break-spaces !important;
  }
}

@media only screen and (max-width: 1290px) {
  .hodler {
    min-width: 220px;
  }
}

.nftLeaderboardTable {
  tr td {
    white-space: nowrap;
  }

  tr td:first-child {
    width: 1%;
  }

  td {
    line-height: 40px;
  }

  tr:nth-child(even) {
    background-color: variables.$almost-very-dark-grey;
  }
}

.leaderboardTable > :not(caption) > * > *,
.nftLeaderboardTable > :not(caption) > * > * {
  padding: 0.5rem;
}

.leaderboardTable tbody > tr > *,
.nftLeaderboardTable tbody > tr > * {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.borderBottom {
  border-bottom: 0.5px solid variables.$font-color !important;
  padding: 0rem !important;
  position: relative;
}

.focusSwitchLabel {
  white-space: nowrap;
  float: left;
  line-height: 48px;
  border: 2px solid white;
  border-left: none;
  padding-left: 10px;
  padding-right: 10px;
  cursor: pointer;
  width: calc(100% / 3);
  text-align: center;

  &:first-of-type {
    border: 2px solid white;
  }
}

.focusSwitchLabelExtraPadding {
  padding-left: 18px;
  padding-right: 18px;
}

.focusSwitchLabelActive {
  background-color: variables.$font-color;
  color: variables.$bg-color-2;
}

.focusSwitch {
  font-size: larger;
  font-weight: bold;
  float: left;
  height: 48px;
  line-height: 48px;
  input {
    cursor: pointer;
    line-height: 48px;
    margin-top: 15px;
    background-color: variables.$project-yellow;
    border-color: variables.$very-dark-grey !important;
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%231e1e1e'/%3e%3c/svg%3e") !important;
  }
  input:checked {
    background-color: variables.$project-orange !important;
  }
}

@media only screen and (max-width: 1200px) {
  .focusSwitch {
    margin-left: 10px;
  }
}

@media only screen and (max-width: 800px) {
  .focusSwitch {
    margin-left: 20px;
  }
}

.contentDropdown {
  line-height: 48px;
  text-align: center;
  background-color: transparent;
  border: none;
  a {
    line-height: 30px;
  }
  button {
    align-items: center;
    display: inline-flex;
    font-size: larger !important;
    font-weight: bolder !important;
    gap: 0.35rem;
    padding: 0;
    background-color: transparent !important;
    border-color: transparent !important;
    &::after {
      display: none;
    }
  }
  div {
    width: 60%;
  }
}

.focus {
  background: transparent;
  border: 0;
  color: variables.$font-color;
  cursor: pointer;
  font: inherit;
  padding: 0;
}

.disabled {
  color: variables.$lightest-grey;
  text-decoration: none;
  &:hover {
    color: white;
  }
}

.museumToggle {
  display: inline-block;
  line-height: 48px;
  margin-right: 25px;
  input {
    margin-top: 15px;
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23000'/%3e%3c/svg%3e") !important;
    border-color: black !important;
  }
  input:checked {
    background-color: variables.$project-yellow !important;
  }
}

.loader {
  width: 22px;
  height: 22px;
  border: 5px solid #fff;
  border-bottom-color: transparent;
  border-radius: 50%;
  display: inline-block;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
  margin-left: 10px;
  margin-bottom: -2px;
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@media (min-width: 1300px) {
  .dMdNone {
    display: none !important;
  }
  .dMdFlex {
    display: flex !important;
  }
}

.interactionsHeader {
  text-align: center;
  border-bottom: 1px solid variables.$font-color !important;
}

.statsContainer {
  background-color: variables.$very-dark-grey;
  border: 1px solid rgba(255, 255, 255, 0.06);
  padding: 15px 20px;
  min-width: 360px;
  color: white;
  box-shadow:
    0.5px 0.5px 3px 0px rgba(255, 255, 255, 0.02),
    1px 3px 6px 0px rgba(0, 0, 0, 0.15),
    -0.5px -1px 3px 0px rgba(255, 255, 255, 0.02),
    -3px -3px 5px 0px rgba(255, 255, 255, 0.02) inset,
    6px 3px 6px 0px rgba(0, 0, 0, 0.4) inset;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  border-radius: 0.5rem;
}

.tdBottomPlace {
  font-size: 14px;
  height: 40px;
  border-bottom: 1px solid variables.$lightest-grey;
  &.me {
    background-color: variables.$project-yellow;
    color: black;
    border-bottom: 1px solid variables.$lightest-grey;
  }
}

.highlightedRow {
  td {
    background-color: variables.$project-yellow;
    color: black;
  }
}

